--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
   <app-root></app-root>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/dc59d75dac.js" crossorigin="anonymous"></script>
 </body>
 </html>
